
Changelog for 8.4.2

DB:
  - fix: wifi position resolution from console
  - fix: send the correct configuration to anonimizer even if outside the chain
  - Improvements in backup creation/restore

Changelog for 9.0.0

Collector:

DB:
  - Ability to create manual entities in the intelligence module
  - Intelligence section new creates links between entities
  - Ability to search with OR queries in info and notes