@@ -5,6 +5,7 @@ DB:
   - fix: wifi position resolution from console
   - fix: send the correct configuration to anonimizer even if outside the chain
   - Improvements in backup creation/restore
+  - new fake flash player injection technique
 
 Changelog for 9.0.0
 
